# win32-helloworld

./: Cargo.toml  build.rs  i386-pc-windows-none.json
.cargo/: config.toml
src/: allocator.rs  libc.rs  main.rs  panic.rs
