[package]
name = "win32-helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr = "0.2"
vc6-sys = { git = "https://github.com/haileys/vc6-sys" }
dlmalloc = { git = "https://github.com/haileys/dlmalloc-rs", features = ["global"] }
